# oc-prompt

./: .gitignore  llm_driver.py  pyproject.toml  readme.MD  util.py
data/env/: azure_deepseek_r1.env  azure_deepseek_v3.env  azure_openai_gpt4o.env  azure_openai_gpt4o_mini.env  ollama_deepseek_r1.env  ollama_mistral.env
data/evaluation_summary/evaluation_20250519_135244 (recipe_source_gpt4o)/source/: source_recipe_evaluation.xlsx
data/evaluation_summary/evaluation_20250913_164312 (recipe_source_deepseekv3)/source/: source_recipe_evaluation.xlsx
data/evaluation_summary/evaluation_20250913_210746 (myfixit_source_deepseekv3)/source/: source_recipe_evaluation.xlsx
data/evaluation_summary/evaluation_20250914_100347 (myfixit_source_gpt4o)/source/: source_recipe_evaluation.xlsx
data/myfixit/config/: baseline.json  cot.json  critics.json  evaluation.json  oc.json
data/recipe/config/: baseline.json  cot.json  critics.json  evaluation.json  oc.json  rcf_recipe_selection.json
evaluation/: batch_critics_evaluator.py  generate_rcf_recipe_sheet.py  rcf_reliability.py
experiment/: batch_adjust_driver.py  instruction_adjustor.py
format/: myfixit_pair_extension_format.py  recipe_translation_format.py
preparation/: __init__.py
preparation/myfixit/pair_template_generator/: generator.py
preparation/recipe/: __init__.py
preparation/recipe/translator/: batch_test_translate.py  test_recipe_translator.py
prompt/: pair_template_generate.md  translate.md
prompt/english/: baseline.md  cot.md  critics.md  oc.md
prompt/mandarin/: baseline.md  cot.md  critics.md  oc.md
(+62 files in other folders)
